<resources>
    <string name="app_name">Template</string>
    <string name="click_me">Click Me</string>
    <string name="applications">Applications</string>
    <string name="gallery">Gallery</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="permission_description">I can not read external storage data. Please, give permission</string>
    <string name="give_permission">Give permission</string>
    <string name="people">People</string>
    <string name="add_person">Add Person</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="age_hint">22</string>
    <string name="name_hint">John Campbell</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="empty_fields">Some fields are empty</string>
    <string name="person_added">Person added</string>
</resources>
